--- a/ClockStudy/bin/AndroidManifest.xml
+++ b/ClockStudy/bin/AndroidManifest.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.dip.tako4652.auctioncalc"
+    package="jp.dip.tako4652.clockstudy"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
-
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="jp.dip.tako4652.auctioncalc_control.MainViewControl"
-            android:label="@string/app_name" android:screenOrientation="portrait">
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="jp.dip.tako4652.auctioncalc_control.SelectViewControl" android:noHistory="true" android:screenOrientation="portrait"></activity>
-
-
+        <activity android:name=".SubActivity"></activity>
+        <activity android:name=".preference"></activity>
     </application>
 
 </manifest>
