--- a/ClockStudy/AndroidManifest.xml
+++ b/ClockStudy/AndroidManifest.xml
@@ -15,15 +15,15 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SubActivity"></activity>
-        <activity android:name=".preference"></activity>
+        <activity android:name=".SubActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".preference" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
